add certification front-end development libraries badge and img

--- a/index.html
+++ b/index.html
@@ -4724,6 +4724,15 @@
                     </div>
                     <div class="badge certification_badge">
                         <div>
+                            <img class="image" src="./src/img/certifications/frontend_development_libraries.webp" alt="Imagen de Certificado en `Front-End Development Libraries` emitido por FreeCodeCamp" loading="lazy" />
+                            <h3 class="badge_name">Front-End Development Libraries</h3>
+                        </div>
+                        <a class="btn" href="https://www.freecodecamp.org/certification/JohnGC/front-end-development-libraries" aria-label="">
+                            <span class="label_btn">Ir A Enlace</span>
+                        </a>
+                    </div>
+                    <div class="badge certification_badge">
+                        <div>
                             <img class="image" src="./src/img/certifications/data_visualization.webp" alt="Imagen de Certificado en `Visualización De Datos` emitido por FreeCodeCamp" loading="lazy" />
                             <h3 class="badge_name">Data Visualization</h3>
                         </div>
