fix--> author style in first quote

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                     </span>
                 </div>
                 <figcaption class="author_container">
-                    <span class="author">Albert Einstein</span>
+                    <span class="author"><i>Albert Einstein</i></span>
                     <span class="author_info">Premio novel de física</span>
                 </figcaption>
             </figure>
