change --> prefesions text

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <div class="bg_section hero_bg"></div>
                 <div class="title_container">
                     <h1>Haciendo<br />ideas<br />realidad</h1>
-                    <h2>Diseño <span class="accent_color">/</span> Ilustración <span class="accent_color">/</span> Desarrollo Web</h2>
+                    <h2>Diseño <span class="accent_color">/</span> Ilustración <span class="accent_color">/</span> Desarrollo</h2>
                 </div>
                 <div class="btns_container">
                     <button type="button" class="btn btn_hero" id="hero_btn_portfolio" name="portfolio_section" tabindex="0"><h3 class="label_btn">Portafolio</h3></button>
@@ -510,12 +510,12 @@
                         <h2 class="title_name animation_up" id="title_name">Jonathan Grajeda<span class="title_effect">_</span></h2>
                     </div>
                     <p class="about_text">
-                        Disfruto de crear, las
-                        <span class="animation_key" data-key="dev">computadoras</span>
-                        fueron mi primer amor, el
+                        Disfruto de crear, el medio es indiferente,
+                        <span class="animation_key" data-key="illustration">ilustrar</span>
+                        una de mis mayores pasiones, el
                         <span class="animation_key" data-key="design">diseño</span>
-                        me hace seguir adelante, aunque si hablamos de mi pasión, estaremos hablando de
-                        <span class="animation_key" data-key="illustration">dibujar</span>
+                        mi profesión, aunque ahora estoy muy interesado en
+                        <span class="animation_key" data-key="dev">desarrollo / web</span>.
                     </p>
                 </div>
 
