change --> profile text description

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                         una de mis mayores pasiones, el
                         <span class="animation_key" data-key="design">diseño</span>
                         mi profesión, aunque ahora estoy muy interesado en
-                        <span class="animation_key" data-key="dev">desarrollo / web</span>.
+                        <span class="animation_key" data-key="dev">desarrollo / web</span>, ya que me gustan los proyectos interactivos y diferentes.
                     </p>
                 </div>
 
