hero personal data

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <div class="bg_section hero_bg"></div>
                 <div class="title_container">
                     <h1>Haciendo<br />ideas<br />realidad</h1>
-                    <h2>Diseño <span class="accent_color">/</span> Ilustración <span class="accent_color">/</span> Desarrollo</h2>
+                    <h2>Ilustración <span class="accent_color">/</span> Diseño <span class="accent_color">/</span> Desarrollo</h2>
                 </div>
                 <div class="btns_container">
                     <button type="button" class="btn btn_hero" id="hero_btn_portfolio" name="portfolio_section" tabindex="0"><h3 class="label_btn">Portafolio</h3></button>
