--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html lang="es">
     <head>
         <meta charset="utf-8" />
@@ -403,7 +400,7 @@
                 <div class="bg_section hero_bg"></div>
                 <div class="title_container">
                     <h1>Haciendo<br />ideas<br />realidad</h1>
-                    <h2>Ilustración <span class="accent_color">/</span> Diseño <span class="accent_color">/</span> Desarrollo</h2>
+                    <h2>Ilustración <span class="accent_color">/</span> Diseño <span class="accent_color">/</span> Web <span class="accent_color">/</span> Desarrollo</h2>
                 </div>
                 <div class="btns_container">
                     <button type="button" class="btn btn_hero" id="hero_btn_portfolio" name="portfolio_section" tabindex="0"><h3 class="label_btn">Portafolio</h3></button>
@@ -4551,7 +4548,7 @@
                 <div class="swipe_animation_container_full">
                     <h1 class="title_section animation_up" id="title_services">Servicios</h1>
                 </div>
-                <div class="cards_container cards_service_container">
+                <!--   <div class="cards_container cards_service_container">
                     <article class="service_card graphic_design_service_card">
                         <div class="icon_container">
                             <svg class="design_table icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 592.72 554.86">
@@ -5525,6 +5522,44 @@
                             </p>
                         </div>
                     </article>
+                </div> -->
+                <div class="cards_service_container">
+                    <article class="card service_card graphic_design_service_card">
+                        <div class="bg_card graphic_design_service_bg">
+                            <img src="https://images.pexels.com/photos/1601773/pexels-photo-1601773.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
+                        </div>
+                        <div class="info_card">
+                            <h2 class="project-tile">Diseño Gráfico</h2>
+                            <p class="info">Mi enfoque en el diseño gráfico se basa en la funcionalidad y la estética para transformar conceptos en imágenes efectivas. Mi trabajo se centra en transmitir el mensaje de manera clara y visualmente atractiva.</p>
+                        </div>
+                    </article>
+                    <article class="card service_card web_service_card">
+                        <div class="bg_card web_service_bg">
+                            <img src="https://images.pexels.com/photos/285814/pexels-photo-285814.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
+                        </div>
+                        <div class="info_card">
+                            <h2 class="project-tile">Front-End</h2>
+                            <p class="info">Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona.</p>
+                        </div>
+                    </article>
+                    <article class="card service_card e_commers_service_card">
+                        <div class="bg_card e-commers_service_bg">
+                            <img src="https://images.pexels.com/photos/7620629/pexels-photo-7620629.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" class="not" loading="lazy" />
+                        </div>
+                        <div class="info_card">
+                            <h2 class="project-tile">E-Commers</h2>
+                            <p class="info">Si tu negocio tiene venta de productos, una gran herramienta seria una tienda en linea, puedo realizarte una tienda diseñada a tu gusto usando las mejores tecnologias.</p>
+                        </div>
+                    </article>
+                    <article class="card service_card UX_UI_service_card">
+                        <div class="bg_card UX-UI_service_bg">
+                            <img src="https://images.pexels.com/photos/196645/pexels-photo-196645.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
+                        </div>
+                        <div class="info_card info_service_card">
+                            <h2 class="project-tile">UX/UI</h2>
+                            <p class="info">La creación de pagina web es importante, asi como es importante darle al usuario una buena experiencia, facilidad de uso, y que tu contenido sea mejor visto por tus clientes.</p>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
@@ -5644,6 +5679,19 @@
         </section>
         <footer class="section legals_section" id="legals_section">
             <div class="footer_content content">
+                <div class="lebels_container">
+                    <div class="made_content">
+                        <span class="copy_rights">@JohnKrazy - 2024 - Derechos reservados</span>
+                        <div class="btns_container">
+                            <button type="button" class="link_btn" data-name="legal_modal">
+                                <span class="label_btn">Legales</span>
+                            </button>
+                            <button type="button" class="link_btn" data-name="alert_modal">
+                                <span class="label_btn">Uso de datos</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
                 <div class="social_btns_container">
                     <a href="https://www.behance.net/jg_john_design" class="icon_container animated_social_btn">
                         <svg class="icon_svg social_icon_svg behance_icon_svg" data-name="behance_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
@@ -5671,102 +5719,22 @@
                         </svg>
                     </a>
                 </div>
-                <div class="lebels_container">
-                    <div class="made_content">
-                        <span class="copy_rights">@JohnKrazy - 2024 - Derechos reservados</span>
-                        <div class="btns_container">
-                            <button type="button" class="link_btn" data-name="legal_modal">
-                                <span class="label_btn">Legales</span>
-                            </button>
-                            <button type="button" class="link_btn" data-name="alert_modal">
-                                <span class="label_btn">Uso de datos</span>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="made_container">
-                        <span class="title_footer" id="title_footer_id">Página realizada con:</span>
-                        <div class="icons_container">
-                            <div class="icon_container tech_logo_container" id="html_logo_container">
-                                <svg class="client_icon_svg html_icon_svg" data-name="html_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                                    <title>HTML</title>
-                                    <polygon class="cls-1" points="5.26 22.99 3.64 4.91 21.36 4.91 19.74 22.99 12.49 25 5.26 22.99" />
-                                    <polygon class="cls-2" points="12.5 23.46 18.36 21.84 19.74 6.39 12.5 6.39 12.5 23.46" />
-                                    <polygon
-                                        class="cls-3"
-                                        points="12.5 8.61 12.49 8.61 6.94 8.61 6.99 9.2 7.54 15.31 12.49 15.31 12.5 15.31 15.22 15.31 14.96 18.19 12.49 18.86 12.49 18.86 12.49 18.86 10.02 18.19 9.86 16.42 8.66 16.42 7.64 16.42 7.95 19.9 12.49 21.16 12.5 21.16 12.5 21.16 17.04 19.9 17.07 19.53 17.59 13.69 17.65 13.1 17.05 13.1 12.5 13.1 12.49 13.1 9.57 13.1 9.36 10.83 12.49 10.83 12.5 10.83 17.84 10.83 17.85 10.83 17.89 10.33 17.99 9.2 18.05 8.61 12.5 8.61"
-                                    />
-                                    <polygon class="cls-4" points="12.5 13.1 9.57 13.1 9.36 10.83 12.5 10.83 12.5 8.61 12.49 8.61 6.94 8.61 6.99 9.2 7.54 15.31 12.5 15.31 12.5 13.1" />
-                                    <polygon class="cls-4" points="12.5 18.86 12.49 18.86 10.02 18.19 9.86 16.42 8.66 16.42 7.64 16.42 7.95 19.9 12.49 21.16 12.5 21.16 12.5 18.86" />
-                                    <polygon class="cls-5" points="7.3 0 7.3 1.33 5.96 1.33 5.96 0 4.98 0 4.98 3.37 5.96 3.37 5.96 1.99 5.96 1.96 7.3 1.96 7.3 3.37 8.28 3.37 8.28 0 7.3 0" />
-                                    <polygon class="cls-5" points="17.7 2.74 17.7 0 16.72 0 16.72 3.37 20.02 3.37 20.02 2.74 17.7 2.74" />
-                                    <polygon class="cls-5" points="15.29 0 15.29 0 14.37 1.58 13.46 0 13.46 0 12.48 0 12.48 3.37 13.46 3.37 13.46 1.99 13.46 1.97 14.27 3.37 14.48 3.37 15.29 1.97 15.29 1.99 15.29 3.37 16.27 3.37 16.27 0 15.29 0" />
-                                    <polygon class="cls-5" points="12.03 0 10.87 0 9.89 0 8.73 0 8.73 0.63 9.89 0.63 9.89 3.37 10.87 3.37 10.87 0.63 12.03 0.63 12.03 0" />
-                                </svg>
-                            </div>
-                            <h2 class="plus_sign">+</h2>
-                            <div class="icon_container tech_logo_container" id="css_logo_container">
-                                <svg class="client_icon_svg css_icon_svg" data-name="css_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                                    <title>CSS</title>
-                                    <polygon class="cls-1" points="5.26 22.99 3.64 4.91 21.36 4.91 19.74 22.99 12.49 25 5.26 22.99" />
-                                    <polygon class="cls-2" points="12.5 23.46 18.36 21.84 19.74 6.39 12.5 6.39 12.5 23.46" />
-                                    <polygon class="cls-3" points="6.75 10.56 6.53 8.47 18.47 8.47 18.33 10.89 13.28 13.13 18.13 13.13 17.6 20 12.72 21.31 7.66 20.08 7.34 16.6 9.58 16.6 9.71 18.44 12.64 18.98 15.35 18.16 15.47 15.21 7.15 15.21 7 13.02 12.5 10.61 6.75 10.56" />
-                                    <polygon class="cls-4" points="7 13.02 7.15 15.21 12.5 15.21 12.5 10.61 7 13.02" />
-                                    <polygon class="cls-4" points="9.71 18.44 9.58 16.6 7.34 16.6 7.66 20.08 12.5 21.26 12.5 18.96 9.71 18.44" />
-                                    <polygon class="cls-4" points="6.53 8.47 6.75 10.56 12.5 10.61 12.5 8.47 6.53 8.47" />
-                                    <polygon class="cls-5" points="14.21 0.84 14.21 0 10.84 0 10.84 1.97 13.16 1.97 13.16 2.6 10.77 2.6 10.77 3.37 14.14 3.37 14.14 1.33 11.75 1.33 11.75 0.84 14.21 0.84" />
-                                    <polygon class="cls-5" points="8.1 1.99 8.1 2.6 10.49 2.6 10.49 3.37 7.12 3.37 7.12 1.35 7.12 0 10.42 0 10.42 0.84 8.1 0.84 8.1 1.99" />
-                                    <polygon class="cls-5" points="17.93 0.84 17.93 0 14.56 0 14.56 1.97 16.88 1.97 16.88 2.6 14.49 2.6 14.49 3.37 17.86 3.37 17.86 1.33 15.47 1.33 15.47 0.84 17.93 0.84" />
-                                </svg>
-                            </div>
-
-                            <h2 class="plus_sign">+</h2>
-                            <div class="icon_container tech_logo_container" id="js_logo_container">
-                                <svg class="client_icon_svg js_icon_svg" data-name="js_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                                    <title>JavaScript</title>
-                                    <path class="cls-1" d="M0,0H25V25H0Z" />
-                                    <path class="cls-2" d="M6.57,20.89l1.92-1.16c.37.66.7,1.21,1.51,1.21s1.26-.3,1.26-1.47v-8H13.6v8A3.19,3.19,0,0,1,10.1,23a3.65,3.65,0,0,1-3.53-2.15" />
-                                    <path
-                                        class="cls-2"
-                                        d="M14.88,20.64l1.91-1.11A2.58,2.58,0,0,0,19.11,21c1,0,1.59-.49,1.59-1.16s-.63-1.09-1.71-1.56L18.41,18c-1.7-.72-2.82-1.63-2.82-3.54A3.14,3.14,0,0,1,19,11.34a3.48,3.48,0,0,1,3.34,1.88L20.54,14.4a1.61,1.61,0,0,0-1.51-1,1,1,0,0,0-1.13,1c0,.7.44,1,1.44,1.42l.59.26c2,.85,3.12,1.72,3.12,3.69S21.39,23,19.16,23a4.52,4.52,0,0,1-4.28-2.4"
-                                    />
-                                </svg>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </footer>
     </body>
     <!--^^TEAMPLATES-->
     <template class="card_project_template">
-        <article class="project_card hot_project_card" id="">
-            <div class="card_content">
-                <img class="img_card" src="" aria-label="" loading="lazy" height="360" />
-                <div class="info_card">
-                    <h1 class="title"></h1>
-                    <h2 class="subtitle">Realizado con:</h2>
-                    <div class="icons_project_container"></div>
-                </div>
+        <div class="card project_card" id="" tabindex="0">
+            <img class="img_card" />
+            <div class="info_project_container">
+                <h2 class="title"></h2>
+                <h3 class="subtitle">Realizado con:</h3>
+                <div class="icons_project_container margin_bottom"></div>
+                <a href="" class="more_btn btn" tabindex="-1" data-link="" target="_blank">Ir a proyecto</a>
             </div>
-            <a href="" class="btn" data-link="">
-                <span class="label_btn">Ver Proyecto</span>
-            </a>
-        </article>
+        </div>
     </template>
-    <template class="mini_card_project_template">
-        <article class="project_card mini_project_card" id="" tabindex="0">
-            <div class="card_content">
-                <h1 class="title"></h1>
-                <div class="info_card">
-                    <h2 class="subtitle">Realizado con:</h2>
-                    <div class="icons_project_container"></div>
-                </div>
-                <a href="" class="btn" data-link="" tabindex="1">
-                    <span class="label_btn">Ver Proyecto</span>
-                </a>
-            </div>
-        </article>
-    </template>
+
     <template class="list_btn extra_list_btn_template">
         <button type="button" class="list_btn extra_list_btn" tabindex="0">
             <span class="label_btn"></span>
@@ -5785,7 +5753,7 @@
     </template>
     <template class="skill_badge_template">
         <div class="badge skill_badge" data-name="">
-            <h3 class="badge_name">Illustrator</h3>
+            <h3 class="badge_name"></h3>
         </div>
     </template>
 </html>
