--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <div class="icon_container">
                         <svg class="icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path
-                                class="clr-1"
+                                class="cls-1"
                                 d="M12 21.9966C6.47715 21.9966 2 17.5194 2 11.9966C2 6.47373 6.47715 1.99658 12 1.99658C17.5228 1.99658 22 6.47373 22 11.9966C22 17.5194 17.5228 21.9966 12 21.9966ZM12 19.9966C16.4183 19.9966 20 16.4149 20 11.9966C20 7.5783 16.4183 3.99658 12 3.99658C7.58172 3.99658 4 7.5783 4 11.9966C4 16.4149 7.58172 19.9966 12 19.9966ZM12 17.9966V5.99658C15.3137 5.99658 18 8.68287 18 11.9966C18 15.3103 15.3137 17.9966 12 17.9966Z"
                             ></path>
                         </svg>
@@ -461,7 +461,7 @@
                         <div class="icon_container">
                             <svg class="icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path
-                                    class="clr-1"
+                                    class="cls-1"
                                     d="M12 21.9966C6.47715 21.9966 2 17.5194 2 11.9966C2 6.47373 6.47715 1.99658 12 1.99658C17.5228 1.99658 22 6.47373 22 11.9966C22 17.5194 17.5228 21.9966 12 21.9966ZM12 19.9966C16.4183 19.9966 20 16.4149 20 11.9966C20 7.5783 16.4183 3.99658 12 3.99658C7.58172 3.99658 4 7.5783 4 11.9966C4 16.4149 7.58172 19.9966 12 19.9966ZM12 17.9966V5.99658C15.3137 5.99658 18 8.68287 18 11.9966C18 15.3103 15.3137 17.9966 12 17.9966Z"
                                 ></path>
                             </svg>
@@ -4506,12 +4506,12 @@
                 <div class="skills_icon_container design_skills_container">
                     <!--? SKILLS ICONS-->
                     <h2 class="subtitle_section">Herramientas de Diseño</h2>
-                    <div class="icons_container" data-ref="design"></div>
+                    <div class="icons_container swipe_animation_container_half" data-ref="design"></div>
                 </div>
                 <div class="skills_icon_container dev_skills_container">
                     <h2 class="subtitle_section">Herramientas de Desarrollo</h2>
                     <!--? SKILLS ICONS-->
-                    <div class="icons_container" data-ref="dev"></div>
+                    <div class="icons_container swipe_animation_container_half" data-ref="dev"></div>
                 </div>
                 <h2 class="subtitle_section">Certificaciones</h2>
                 <div class="icons_container certification_container"></div>
@@ -5752,7 +5752,7 @@
         </div>
     </template>
     <template class="skill_badge_template">
-        <div class="badge skill_badge" data-name="">
+        <div class="badge skill_badge animation_up" data-name="" id="">
             <h3 class="badge_name"></h3>
         </div>
     </template>
