change lang labels

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             </svg>
                         </div>
                     </button>
-                    <button type="button" class="nav_btn lang_btn" name="lang_btn">
+                    <button type="button" class="nav_btn extra_btn lang_btn" name="lang_btn">
                         <span class="label_btn label_lang icon_container extra_btn" data-change data-es="EN" data-en="ES"></span>
                     </button>
                 </div>
@@ -420,7 +420,7 @@
                 <div class="title_container">
                     <h1>
                         <span data-change data-es="Haciendo" data-en="Making"></span>
-                        <br />ideas<br />
+                        <br /><span>ideas</span><br />
                         <span data-change data-es="realidad" data-en="happen"></span>
                     </h1>
                     <h2>
@@ -430,7 +430,7 @@
                         <span class="accent_color">/</span>
                         <span>Web</span>
                         <span class="accent_color">/</span>
-                        <span data-change data-es="Programación" data-en="programming"></span>
+                        <span data-change data-es="Programación" data-en="Programming"></span>
                     </h2>
                 </div>
                 <div class="btns_container">
@@ -600,7 +600,7 @@
                             </svg>
                         </span>
                     </span>
-                    <q class="quote">No tengo talentos especiales. Sólo soy apasionadamente curioso</q>
+                    <q class="quote" data-change data-es="No tengo talentos especiales. Sólo soy apasionadamente curioso" data-en="I have no special talent. I'm just passionately curious"></q>
                     <span class="quote_icon quote_end">
                         <span class="icon_container">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -611,7 +611,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Albert Einstein</i></span>
-                    <span class="author_info">Premio novel de física</span>
+                    <span class="author_info" data-change data-es="Premio novel de física" data-en="Nobel Prize in Physics"></span>
                 </figcaption>
             </figure>
         </div>
@@ -4603,7 +4603,7 @@
                             </svg>
                         </span>
                     </span>
-                    <q class="quote">Nunca trato de probar nada a nadie, Quiero probarme algo a mi mismo</q>
+                    <q class="quote" data-change data-es="Nunca trato de probar nada a nadie, Quiero probarme algo a mi mismo" data-en="I never try to prove anything to anyone, I want to prove something to myself."></q>
                     <span class="quote_icon quote_end">
                         <span class="icon_container">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -4647,7 +4647,7 @@
                             </svg>
                         </span>
                     </span>
-                    <q class="quote">No es acerca de cuantas horas entrenas, es acerca de cuantas horas tu mente está presente en el entrenamiento</q>
+                    <q class="quote" data-change data-es="No es acerca de cuantas horas entrenas, es acerca de cuantas horas tu mente está presente en el entrenamiento" data-en="It's not about how many hours you train, it's about how many hours your mind is present in training."></q>
                     <span class="quote_icon quote_end">
                         <span class="icon_container">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -4658,7 +4658,7 @@
                 </div>
                 <figcaption class="author_container">
                     <span class="author"><i>Kobe Bryant</i></span>
-                    <span class="author_info">Jugador de la NBA</span>
+                    <span class="author_info" data-change data-es="Ex Campeon De La NBA" data-en="NBA Former Champeion"></span>
                 </figcaption>
             </figure>
         </div>
@@ -4666,7 +4666,7 @@
             <div class="section_content content">
                 <!--~~TITLE SECTION-->
                 <div class="swipe_animation_container_full">
-                    <h1 class="title_section animation_up" id="title_services">Servicios</h1>
+                    <h1 class="title_section animation_up" id="title_services" data-change data-es="Servicios" data-en="Services"></h1>
                 </div>
 
                 <div class="cards_service_container">
@@ -4675,7 +4675,7 @@
                             <img src="https://images.pexels.com/photos/1601773/pexels-photo-1601773.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
                         </div>
                         <div class="info_card">
-                            <h2 class="project-tile">Diseño Gráfico</h2>
+                            <h2 class="project-tile" data-change data-es="Diseño Gráfico" data-en="Graphic Design"></h2>
                             <p class="info">Mi enfoque en el diseño gráfico se basa en la funcionalidad y la estética para transformar conceptos en imágenes efectivas. Mi trabajo se centra en transmitir el mensaje de manera clara y visualmente atractiva.</p>
                         </div>
                     </article>
@@ -4684,7 +4684,7 @@
                             <img src="https://images.pexels.com/photos/285814/pexels-photo-285814.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=1" loading="lazy" />
                         </div>
                         <div class="info_card">
-                            <h2 class="project-tile">Front-End</h2>
+                            <h2 class="project-tile" data-change data-es="Desarrollo Front-End" data-en="Front-End Devlopment"></h2>
                             <p class="info">Dentro del desarrollo de programación, darle estilo y formato a las ideas es algo que me apaciona.</p>
                         </div>
                     </article>
@@ -4743,7 +4743,7 @@
                 <div class="cards_container swipe_animation_container_half cards_hot_container"></div>
 
                 <button type="button" class="btn more_btn portfolio_btn" data-name="portfolio_modal">
-                    <span class="label_btn"> Ver Todos Los Trabajos </span>
+                    <span class="label_btn" data-change data-es="Ver Todo" data-en="See All"></span>
                 </button>
             </div>
         </section>
@@ -4757,7 +4757,7 @@
                             </svg>
                         </span>
                     </span>
-                    <q class="quote">Sin requerimientos o diseño, programar sólo es el arte de agregar errores a un archivo vacío.</q>
+                    <q class="quote" data-change data-es="Sin requerimientos o diseño, programar sólo es el arte de agregar errores a un archivo vacío." data-en="Without requirements or design, programming is just the art of adding errors to an empty file."></q>
                     <span class="quote_icon quote_end">
                         <span class="icon_container">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -4776,19 +4776,19 @@
             <div class="bg_section"></div>
             <div class="section_content content">
                 <div class="swipe_animation_container_full">
-                    <h1 class="title_section animation_up" id="title_contact">Contacto</h1>
+                    <h1 class="title_section animation_up" id="title_contact" data-change data-es="Contacto" data-en="Contact"></h1>
                 </div>
-                <h2 class="subtitle_section">Estoy ansioso de hacer proyectos interesantes con tus ideas</h2>
+                <h2 class="subtitle_section" data-change data-es="Estoy ansioso de hacer proyectos interesantes con tus ideas" data-en="I'm looking forward to doing interesting projects with your ideas."></h2>
 
                 <form class="form contact_form" id="contact_form">
-                    <h3>Correo</h3>
+                    <h3 data-change data-es="Envia correo" data-en="Send Email"></h3>
                     <div class="input_container">
-                        <label for="body_input_name">Nombre/s</label>
+                        <label for="body_input_name" data-change data-es="Nombre/s" data-en="Name/s"></label>
                         <input type="text" placeholder="Escribe tu/s Nombre/s" id="body_input_name" name="name" class="input_name" />
                     </div>
 
                     <div class="input_container">
-                        <label for="body_input_last_name">Apellidos</label>
+                        <label for="body_input_last_name" data-change data-es="Apellido" data-en="Last Name"></label>
                         <input type="text" placeholder="Escribe tus Apellidos" id="body_input_last_name" name="last_name" class="input_last_name" />
                     </div>
 
@@ -4798,15 +4798,15 @@
                     </div>
 
                     <div class="input_container last">
-                        <label for="body_input_textarea">Descripción</label>
+                        <label for="body_input_textarea" data-change data-es="Descripción" data-en="Description"></label>
                         <textarea placeholder="Comparte me un resumen de tu idea" id="body_input_textarea" name="description" class="input_description"></textarea>
                     </div>
                     <input type="hidden" name="access_key" value="5dfd5c33-4542-492d-a32f-194035787e90" />
                     <button type="submit" id="contact_form_send_btn" data-form="body_form" class="btn send_btn">
-                        <span class="label_btn">Enviar</span>
+                        <span class="label_btn" data-change data-es="Enviar" data-en="Send"></span>
                     </button>
                     <div class="form_response_container">
-                        <p class="form_response">Respuesta promedio solo para probar</p>
+                        <p class="form_response"></p>
                     </div>
                 </form>
                 <a href="https://api.whatsapp.com/send?phone=525614207862&text=Necesito informacion sobre tus servicios" class="whatsapp_btn animated_social_btn">
@@ -4827,13 +4827,13 @@
             <div class="footer_content content">
                 <div class="lebels_container">
                     <div class="made_content">
-                        <span class="copy_rights">@JohnKrazy - 2024 - Derechos reservados</span>
+                        <span class="copy_rights">@JohnKrazy - 2024 - <span data-change data-es="Derechos reservados" data-en="Rights Reserved"></span></span>
                         <div class="btns_container">
                             <button type="button" class="link_btn" data-name="legal_modal">
-                                <span class="label_btn">Legales</span>
+                                <span class="label_btn" data-change data-es="Legales" data-en="Legals"></span>
                             </button>
                             <button type="button" class="link_btn" data-name="alert_modal">
-                                <span class="label_btn">Uso de datos</span>
+                                <span class="label_btn" data-change data-es="Uso de datos" data-en="Data Use"></span>
                             </button>
                         </div>
                     </div>
@@ -4874,9 +4874,9 @@
             <img class="img_card" />
             <div class="info_project_container">
                 <h2 class="title"></h2>
-                <h3 class="subtitle">Realizado con:</h3>
+                <h3 class="subtitle" data-change data-es="Realizado Con:" data-en="Made With:"></h3>
                 <div class="icons_project_container margin_bottom"></div>
-                <a href="" class="more_btn btn" tabindex="-1" data-link="" target="_blank" data-change data-es="Ir a proyecto" data-en="Go To Proyect"> </a>
+                <a href="" class="more_btn btn" tabindex="-1" data-link="" target="_blank" data-change data-es="Ir a" data-en="Go To"> </a>
             </div>
         </div>
     </template>
