fixed up info bubble hover, return nav icons and fixed ub text label in skill es

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                                 <path class="cls-1" d="M3 13h1v7c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-7h1a1 1 0 0 0 .707-1.707l-9-9a.999.999 0 0 0-1.414 0l-9 9A1 1 0 0 0 3 13zm7 7v-5h4v5h-4zm2-15.586 6 6V15l.001 5H16v-5c0-1.103-.897-2-2-2h-4c-1.103 0-2 .897-2 2v5H6v-9.586l6-6z"></path>
                             </svg>
                         </span>
-                        <span class="label_btn" data-change data-es="Inicio" data-en="Home"></span>
+                        <span class="label_btn" data-change data-es="Inicio" data-en="Home">Inicio</span>
                     </button>
                     <button type="button" class="section_btn nav_btn about_nav_btn" name="about_section" data-lebel="Acerca de">
                         <span class="icon_container icon_btn">
@@ -558,7 +558,7 @@
                                 <path class="cls-1" d="M15 22V9h5V7H4v2h5v13h2v-7h2v7z"></path>
                             </svg>
                         </span>
-                        <span class="label_btn" data-change data-es="Acerca De" data-en="About Us"></span>
+                        <span class="label_btn" data-change data-es="Acerca De" data-en="About Us">Acerca De</span>
                     </button>
                     <button type="button" class="section_btn nav_btn skills_nav_btn" name="skills_section" data-lebel="Habilidades">
                         <span class="icon_container icon_btn">
@@ -570,7 +570,7 @@
                                 />
                             </svg>
                         </span>
-                        <span class="label_btn" data-change data-en="Skills" data-en="Habilidades"></span>
+                        <span class="label_btn" data-change data-en="Skills" data-es="Habilidades">Habilidades</span>
                     </button>
                     <button type="button" class="section_btn nav_btn services_nav_btn" name="services_section" data-lebel="Servicios">
                         <span class="icon_container icon_btn">
@@ -582,7 +582,7 @@
                                 />
                             </svg>
                         </span>
-                        <span class="label_btn" data-change data-en="Services" data-es="Servicios"></span>
+                        <span class="label_btn" data-change data-en="Services" data-es="Servicios">Servicios</span>
                     </button>
                     <button type="button" class="section_btn nav_btn portfolio_nav_btn" name="portfolio_section" data-lebel="Portafolio">
                         <span class="icon_container icon_btn">
@@ -601,7 +601,7 @@
                                 <path class="cls-1" d="M6.455 19L2 22.5V4a1 1 0 0 1 1-1h18a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H6.455zm-.692-2H20V5H4v13.385L5.763 17zM11 10h2v2h-2v-2zm-4 0h2v2H7v-2zm8 0h2v2h-2v-2z" />
                             </svg>
                         </span>
-                        <span class="label_btn" data-change data-en="Contact" data-es="Contacto"></span>
+                        <span class="label_btn" data-change data-en="Contact" data-es="Contacto">Contacto</span>
                     </button>
                     <button type="button" class="section_btn nav_btn legals_nav_btn" name="legals_section" data-lebel="Legales">
                         <span class="icon_container icon_btn">
@@ -612,7 +612,7 @@
                                 ></path>
                             </svg>
                         </span>
-                        <span class="label_btn" data-change data-en="Legals" data-es="Legales"></span>
+                        <span class="label_btn" data-change data-en="Legals" data-es="Legales">Legales</span>
                     </button>
                     <button type="button" class="nav_btn theme_btn" name="theme_btn" aria-label="Button to change color scheame in page">
                         <div class="icon_container">
@@ -4972,7 +4972,7 @@
         </div>
     </template>
     <template class="skill_badge_template">
-        <div class="badge skill_badge animation_up" data-name="" id="">
+        <div class="badge skill_badge" data-name="" id="">
             <h3 class="badge_name"></h3>
         </div>
     </template>
