--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <meta name="description" content="" />
         <script type="module" charset="utf-8" src="./src/js/utils.js" defer></script>
         <script type="module" charset="utf-8" src="./src/js/selectors.js" defer></script>
-        <script type="module" charset="utf-8" src="./src/js/index.js" defer></script>
         <link rel="icon" type="image/svg" href="./src/img/personal_logos/johnK_tab_icon.svg" />
         <link rel="image_src" href="./src/img/desk.png" />
         <link rel="canonical" href="https://johnmckrazy.github.io/JohnK_Portafolio/" />
@@ -282,55 +281,6 @@
             </div>
         </div>
         <div class="menu_controler phone_menu_controler">
-            <div class="extra_btns_container nav_menu_extra_btns">
-                <div class="btns_container">
-                    <button type="button" class="extra_btn theme_btn">
-                        <div class="icon_container">
-                            <svg class="icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <path
-                                    class="cls-1"
-                                    d="M12 21.9966C6.47715 21.9966 2 17.5194 2 11.9966C2 6.47373 6.47715 1.99658 12 1.99658C17.5228 1.99658 22 6.47373 22 11.9966C22 17.5194 17.5228 21.9966 12 21.9966ZM12 19.9966C16.4183 19.9966 20 16.4149 20 11.9966C20 7.5783 16.4183 3.99658 12 3.99658C7.58172 3.99658 4 7.5783 4 11.9966C4 16.4149 7.58172 19.9966 12 19.9966ZM12 17.9966V5.99658C15.3137 5.99658 18 8.68287 18 11.9966C18 15.3103 15.3137 17.9966 12 17.9966Z"
-                                ></path>
-                            </svg>
-                        </div>
-                    </button>
-                    <button type="button" class="nav_btn extra_btn lang_btn" name="lang_btn">
-                        <span class="label_btn label_lang icon_container extra_btn" data-change data-es="EN" data-en="ES"></span>
-                    </button>
-                </div>
-                <button type="button" class="extra_btn close_btn action_menu" id="menu_container_close_btn">
-                    <div class="icon_container">
-                        <svg class="icon_svg close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
-                            <title>Cerrar</title>
-                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
-                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
-                        </svg>
-                    </div>
-                </button>
-            </div>
-            <div class="nav_menu_link_btns">
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="hero_section" data-lebel="Inicio">
-                    <span class="label_btn" data-change data-en="Home" data-es="Inicio"></span>
-                </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="about_section" data-lebel="Acerca de">
-                    <span class="label_btn" data-change data-en="About Us" data-es="Acerca De"></span>
-                </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="skills_section" data-lebel="Habilidades">
-                    <span class="label_btn" data-change data-en="Skills" data-es="Habilidades"></span>
-                </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="services_section" data-lebel="Servicios">
-                    <span class="label_btn" data-change data-en="Services" data-es="Servicios"></span>
-                </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="portfolio_section" data-lebel="Portafolio">
-                    <span class="label_btn" data-change data-en="Portfolio" data-es="Portafolio"></span>
-                </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="contact_section" data-lebel="Contacto">
-                    <span class="label_btn" data-change data-en="Contact" data-es="Contacto"></span>
-                </button>
-                <button type="button" class="phone_menu_btn section_btn action_menu" name="legals_section" data-lebel="Legales">
-                    <span class="label_btn" data-change data-en="Legals" data-es="Legales"></span>
-                </button>
-            </div>
             <div class="social_btns_container nav_menu_social_btns">
                 <a href="https://www.behance.net/jg_john_design" class="phone_menu_btn action_menu">
                     <div class="icon_social_container">
@@ -381,6 +331,55 @@
                             <polygon class="cls-1" points="16.05 9.06 25 16.79 25 1.6 16.05 9.06" />
                             <polygon class="cls-1" points="0 1.6 0 16.79 8.96 9.06 0 1.6" />
                             <polygon class="cls-1" points="15.3 9.68 12.5 12.02 9.7 9.68 0 18 25 18 15.3 9.68" />
+                        </svg>
+                    </div>
+                </button>
+            </div>
+            <div class="nav_menu_link_btns">
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="hero_section" data-lebel="Inicio">
+                    <span class="label_btn" data-change data-en="Home" data-es="Inicio"></span>
+                </button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="about_section" data-lebel="Acerca de">
+                    <span class="label_btn" data-change data-en="About Us" data-es="Acerca De"></span>
+                </button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="skills_section" data-lebel="Habilidades">
+                    <span class="label_btn" data-change data-en="Skills" data-es="Habilidades"></span>
+                </button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="services_section" data-lebel="Servicios">
+                    <span class="label_btn" data-change data-en="Services" data-es="Servicios"></span>
+                </button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="portfolio_section" data-lebel="Portafolio">
+                    <span class="label_btn" data-change data-en="Portfolio" data-es="Portafolio"></span>
+                </button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="contact_section" data-lebel="Contacto">
+                    <span class="label_btn" data-change data-en="Contact" data-es="Contacto"></span>
+                </button>
+                <button type="button" class="phone_menu_btn section_btn action_menu" name="legals_section" data-lebel="Legales">
+                    <span class="label_btn" data-change data-en="Legals" data-es="Legales"></span>
+                </button>
+            </div>
+            <div class="extra_btns_container nav_menu_extra_btns">
+                <div class="btns_container">
+                    <button type="button" class="extra_btn theme_btn">
+                        <div class="icon_container">
+                            <svg class="icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path
+                                    class="cls-1"
+                                    d="M12 21.9966C6.47715 21.9966 2 17.5194 2 11.9966C2 6.47373 6.47715 1.99658 12 1.99658C17.5228 1.99658 22 6.47373 22 11.9966C22 17.5194 17.5228 21.9966 12 21.9966ZM12 19.9966C16.4183 19.9966 20 16.4149 20 11.9966C20 7.5783 16.4183 3.99658 12 3.99658C7.58172 3.99658 4 7.5783 4 11.9966C4 16.4149 7.58172 19.9966 12 19.9966ZM12 17.9966V5.99658C15.3137 5.99658 18 8.68287 18 11.9966C18 15.3103 15.3137 17.9966 12 17.9966Z"
+                                ></path>
+                            </svg>
+                        </div>
+                    </button>
+                    <button type="button" class="nav_btn extra_btn lang_btn" name="lang_btn">
+                        <span class="label_btn label_lang icon_container extra_btn" data-change data-es="EN" data-en="ES"></span>
+                    </button>
+                </div>
+                <button type="button" class="extra_btn close_btn action_menu" id="menu_container_close_btn">
+                    <div class="icon_container">
+                        <svg class="icon_svg close_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 25 25">
+                            <title>Cerrar</title>
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(12.5 -5.18) rotate(45)" />
+                            <rect class="cls-1" x="-1.92" y="11.32" width="28.83" height="2.36" transform="translate(30.18 12.5) rotate(135)" />
                         </svg>
                     </div>
                 </button>
@@ -4976,4 +4975,5 @@
             <h3 class="badge_name"></h3>
         </div>
     </template>
+    <script type="module" src="./src/js/index.js" async defer></script>
 </html>
