check for bugs, remove not necesary divider in footer

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             </div>
         </nav>
         <div class="section_divider">
-            <figure class="content">
+            <figure class="divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4630,7 +4630,7 @@
             </div>
         </section>
         <div class="section_divider">
-            <figure class="content">
+            <figure class="divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4674,7 +4674,7 @@
             </div>
         </section>
         <div class="section_divider">
-            <figure class="content">
+            <figure class="divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4773,7 +4773,7 @@
             </div>
         </section>
         <div class="section_divider">
-            <figure class="content">
+            <figure class="divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4811,7 +4811,7 @@
             </div>
         </section>
         <div class="section_divider">
-            <figure class="content">
+            <figure class="divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4891,9 +4891,6 @@
             </div>
         </section>
         <footer class="section legals_section" id="legals_section">
-            <div class="section_divider">
-                <div class="content"></div>
-            </div>
             <div class="footer_content content">
                 <div class="lebels_container">
                     <div class="made_content">
