change remove content class in section divider content

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             </div>
         </nav>
         <div class="section_divider">
-            <figure class="divider_content">
+            <figure class="content divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4630,7 +4630,7 @@
             </div>
         </section>
         <div class="section_divider">
-            <figure class="divider_content">
+            <figure class="content divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4674,7 +4674,7 @@
             </div>
         </section>
         <div class="section_divider">
-            <figure class="divider_content">
+            <figure class="content divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4773,7 +4773,7 @@
             </div>
         </section>
         <div class="section_divider">
-            <figure class="divider_content">
+            <figure class="content divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
@@ -4811,7 +4811,7 @@
             </div>
         </section>
         <div class="section_divider">
-            <figure class="divider_content">
+            <figure class="content divider_content">
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
                         <span class="icon_container">
